--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -158,3 +158,10 @@
     year={2010},
     publisher={Princeton University Press}
 }
+
+@online{derivativeInverseMatrix,
+  author = {matte (1858)},
+  title = {derivative of inverse matrix},
+  url = {https://planetmath.org/derivativeofinversematrix},
+  urldate = {},
+}
