--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -982,7 +982,7 @@ Tag der Einreichung: \datum
             Folglich gilt für die Ableitung:
             $$\frac{d}{dt}\sum_{j=1}^{n} a_{ij}(t)\widetilde{a}_{jk}(t) = \sum_{j=1}^{n} \frac{d}{dt}a_{ij}(t)\ \widetilde{a}_{jk}(t)+a_{ij}(t)\ \frac{d}{dt}\widetilde{a}_{jk}(t) = 0 \quad \forall i,k\in\{1,\dots,n\}$$
             Diese Gleichungen kann man in eine Gleichung über Matrizen umformen:
-            $$frac{dA}{dt}\ A\inv + A\ frac{dA\inv}{dt} = 0$$
+            $$\frac{dA}{dt}\ A\inv + A\ \frac{dA\inv}{dt} = 0$$
             Nach Umstellen folgt damit die Behauptung.\qed
 % in Quelle wurde t auf ein Intervall beschränkt, A muss Inverse haben und stetig diffb. sein für alle t, das müsste man noch zeigen
 
