--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -17,7 +17,7 @@
     url = { https://katalog.slub-dresden.de/id/0-688968007 }
 }
 
-@book{projektionJarre,
+@book{optimierungJarreProjektion,
     author={Jarre, Florian and Stoer, Josef},
     title={Projektionsverfahren},
     bookTitle={Optimierung: Einführung in mathematische Theorie und Methoden},
@@ -124,15 +124,15 @@
     urldate={2024-09-04T09:49:00}
 }
 
-@misc {LinAlgKowalsky,
-    author = { Kowalsky, Hans-Joachim },
-    title = { Lineare Algebra },
-    edition = { 2. Aufl. Reprint 2019 } ,
-    publisher = {De Gruyter},
-    isbn = {9783111337579},
-    year = {2019},
-    url = { https://katalog.slub-dresden.de/id/0-1667384449 }
-}
+% @misc {LinAlgKowalsky,
+%     author = { Kowalsky, Hans-Joachim },
+%     title = { Lineare Algebra },
+%     edition = { 2. Aufl. Reprint 2019 } ,
+%     publisher = {De Gruyter},
+%     isbn = {9783111337579},
+%     year = {2019},
+%     url = { https://katalog.slub-dresden.de/id/0-1667384449 }
+% }
 
 @online{conjugateTranspose,
     author={Weisstein, Eric W.},
@@ -141,7 +141,7 @@
     urldate={2024-09-06T10:16:00}
 }
 
-@misc {complexAnalysis,
+@misc{complexAnalysis,
     author = { Marshall, Donald E. },
     title = { Complex Analysis },
     publisher = {Cambridge University Press},
@@ -160,8 +160,46 @@
 }
 
 @online{derivativeInverseMatrix,
-  author = {matte (1858)},
-  title = {derivative of inverse matrix},
-  url = {https://planetmath.org/derivativeofinversematrix},
-  urldate = {},
+    author = {matte (1858)},
+    title = {derivative of inverse matrix},
+    url = {https://planetmath.org/derivativeofinversematrix},
+    urldate = {},
+}
+
+@phdthesis{matrixPencilDeutsch,
+    title={Nicht axialsymmetrische Wellenausbreitung in anisotropen zylindrischen Strukturen},
+    author={Gsell, Daniel},
+    year={2002},
+    school={ETH Zurich}
+}
+
+@article{regularMatrixPencil,
+    title={Matrix pencils: Theory, applications, and numerical methods},
+    author={Ikramov, Kh D},
+    journal={Journal of Soviet Mathematics},
+    volume={64},
+    pages={783--853},
+    year={1993},
+    publisher={Springer}
+}
+
+@incollection{LinAlgWerner,
+    title={Lineare Abbildungen},
+    author={Werner, Dirk},
+    booktitle={Lineare Algebra},
+    pages={57--72},
+    year={2022},
+    publisher={Springer}
+}
+
+@misc {matrixSpur,
+    author = { Horn, Roger A. AND Johnson, Charles R. },
+    title = { Matrix analysis },
+    edition = { 2nd ed. } ,
+    publisher = {Cambridge University Press},
+    isbn = {9781139020411},
+    isbn = {9780521839402},
+    isbn = {9780521548236},
+    year = {2013},
+    url = { https://katalog.slub-dresden.de/id/0-1859628885 }
 }
